# ANDCODEDIT

./: .gitignore  LOOP_LOG.md  README.md  gradle.properties  local.properties  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/monaco/: PLACE_MONACO_HERE.md  editor.html
app/src/main/java/com/andcodedit/: AndCodEditApp.kt  MainActivity.kt
app/src/main/java/com/andcodedit/ai/: AiAgentService.kt
app/src/main/java/com/andcodedit/data/: AndCodeDatabase.kt  ProjectFile.kt  ProjectFileDao.kt  ProjectRepository.kt
app/src/main/java/com/andcodedit/dex/: DexParserService.kt
app/src/main/java/com/andcodedit/editor/: MonacoWebView.kt
app/src/main/java/com/andcodedit/git/: GitService.kt
app/src/main/java/com/andcodedit/lang/: CodeRunner.kt  InProcessRunner.kt  Language.kt  LanguageRegistry.kt  RuntimeManager.kt  ShellEnvironment.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
docs/: AUDIT.md  architecture.md  build-and-setup.md  ci-cd.md  contributing.md  phased_technically_detailed_plan.md  prd.md  roadmap.md  specdriven_kit.md  ux_flow_document.md
docs/skills/: android-developer.md  kotlin.md
rust-terminal/: Cargo.toml  README.md  build.rs  uniffi.toml
rust-terminal/src/: andcodedit_terminal.udl  lib.rs
scripts/: setup-and-build.sh
(+31 files in other folders)
